err/secpass.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/FormEncode-2.0.0a1.dist-info'...
Listing './lib/python3.5/site-packages/aadict'...
Listing './lib/python3.5/site-packages/aadict-0.2.3.egg-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/asset'...
Listing './lib/python3.5/site-packages/asset/test'...
Listing './lib/python3.5/site-packages/asset/test/data'...
Listing './lib/python3.5/site-packages/asset/test/data/subdir'...
Listing './lib/python3.5/site-packages/asset-0.6.12.egg-info'...
Listing './lib/python3.5/site-packages/blessings'...
Listing './lib/python3.5/site-packages/blessings-1.6.1.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/distribute-0.7.3-py3.5.egg-info'...
Listing './lib/python3.5/site-packages/docs'...
Listing './lib/python3.5/site-packages/formencode'...
Listing './lib/python3.5/site-packages/formencode/i18n'...
Listing './lib/python3.5/site-packages/formencode/i18n/cs'...
Listing './lib/python3.5/site-packages/formencode/i18n/cs/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/da'...
Listing './lib/python3.5/site-packages/formencode/i18n/da/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/de'...
Listing './lib/python3.5/site-packages/formencode/i18n/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/el'...
Listing './lib/python3.5/site-packages/formencode/i18n/el/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/es'...
Listing './lib/python3.5/site-packages/formencode/i18n/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/et'...
Listing './lib/python3.5/site-packages/formencode/i18n/et/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/fi'...
Listing './lib/python3.5/site-packages/formencode/i18n/fi/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/fr'...
Listing './lib/python3.5/site-packages/formencode/i18n/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/it'...
Listing './lib/python3.5/site-packages/formencode/i18n/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/ja'...
Listing './lib/python3.5/site-packages/formencode/i18n/ja/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/ko'...
Listing './lib/python3.5/site-packages/formencode/i18n/ko/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/lt'...
Listing './lib/python3.5/site-packages/formencode/i18n/lt/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/nb_NO'...
Listing './lib/python3.5/site-packages/formencode/i18n/nb_NO/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/nl'...
Listing './lib/python3.5/site-packages/formencode/i18n/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/pl'...
Listing './lib/python3.5/site-packages/formencode/i18n/pl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/pt_BR'...
Listing './lib/python3.5/site-packages/formencode/i18n/pt_BR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/pt_PT'...
Listing './lib/python3.5/site-packages/formencode/i18n/pt_PT/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/ru'...
Listing './lib/python3.5/site-packages/formencode/i18n/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/sk'...
Listing './lib/python3.5/site-packages/formencode/i18n/sk/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/sl'...
Listing './lib/python3.5/site-packages/formencode/i18n/sl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/sr'...
Listing './lib/python3.5/site-packages/formencode/i18n/sr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/sr@latin'...
Listing './lib/python3.5/site-packages/formencode/i18n/sr@latin/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/sv'...
Listing './lib/python3.5/site-packages/formencode/i18n/sv/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/tr'...
Listing './lib/python3.5/site-packages/formencode/i18n/tr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/zh_CN'...
Listing './lib/python3.5/site-packages/formencode/i18n/zh_CN/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/zh_TW'...
Listing './lib/python3.5/site-packages/formencode/i18n/zh_TW/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/javascript'...
Listing './lib/python3.5/site-packages/formencode/tests'...
Listing './lib/python3.5/site-packages/formencode/tests/htmlfill_data'...
Listing './lib/python3.5/site-packages/globre'...
Listing './lib/python3.5/site-packages/globre-0.1.5.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/morph'...
Listing './lib/python3.5/site-packages/morph-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_gnupg-0.4.1.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/secpass'...
Listing './lib/python3.5/site-packages/secpass/cli'...
Compiling './lib/python3.5/site-packages/secpass/cli/note.py'...
***   File "./lib/python3.5/site-packages/secpass/cli/note.py", line 49
    print fmt.format(
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/secpass/cli/pass.py'...
***   File "./lib/python3.5/site-packages/secpass/cli/pass.py", line 59
    print fmt.format(idx=idx + 1, wid=wid, rwid=rwid, swid=swid, record=record,
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/secpass/driver'...
Listing './lib/python3.5/site-packages/secpass/res'...
Listing './lib/python3.5/site-packages/secpass/res/help'...
Listing './lib/python3.5/site-packages/secpass-0.4.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
